--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <h2 class="text-center mb-4">Discover the Beauty of TAJ</h2>
     <div class="container my-5">
       <h2 class="text-center mb-4">Discover the Beauty of TAJ</h2>
+	    <h2 class="text-center mb-4">123</h2>
     <div id="hotelCarousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner rounded shadow">
         <div class="carousel-item active">
