--- a/facilities.html
+++ b/facilities.html
@@ -36,6 +36,7 @@
   <div class="container text-center my-5">
     <h1 class="text-primary mb-3">Our Premium Facilities</h1>
     <p class="text-muted">Enjoy world-class amenities at TAJ Hotel</p>
+	    <p class="text-muted">Enjoy world-class amenities at TAJ Hotel</p>
   </div>
 
   <!-- Facilities Grid -->
