--- a/facilities.html
+++ b/facilities.html
@@ -52,6 +52,15 @@
           </div>
         </div>
       </div>
+	   <div class="col-md-4">
+        <div class="card shadow facility-card">
+          <img src="https://source.unsplash.com/600x400/?luxury,spa" class="card-img-top" alt="Spa">
+          <div class="card-body">
+            <h5 class="card-title">Luxury Spa</h5>
+            <p class="card-text">Relax and rejuvenate with our full-body massages and Ayurvedic therapies.</p>
+          </div>
+        </div>
+      </div>
 
       <!-- Pool -->
       <div class="col-md-4">
